deploy/k8s/base/s3-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-gateway
  namespace: neurostore
spec:
  selector:
    app: s3-gateway
  ports:
    - name: http
      port: 80
      targetPort: 9009
